//
// Copyright 2016, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.base;

option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_outer_classname = "EventStorageRecordFilterProto";
option java_package = "org.spine3.base";

import public "spine/base/event.proto";
import public "spine/base/field_filter.proto";

// Filters `EventStorageRecord`s by the type of the event, event field values, and by `EventContext` field values.
//
// The time of the event is filtered by `before` and `after` attributes of `EventStreamQuery`.
message EventStorageRecordFilter {
    // The full Proto type name of the event.
    string event_type = 1;

    // The list of aggregate IDs of interest. Or empty, if include events for all aggregates.
    repeated google.protobuf.Any aggregate_id = 2;

    //TODO:2016-01-11:alexander.yevsyukov: implement these filters if we need to query on deeper details.
    // Accepted event field values.
    // repeated FieldFilter event_field_filter = 3;

    // Accepted `EventContext` field values.
    // repeated FieldFilter context_field_filter = 4;
}

